# demo

./: .gitignore  BROWSER_TEST_INSTRUCTIONS.md  BROWSER_TEST_NOW.md  CHANGELOG.md  CHATBOT_FIXES_COMPLETE.md  CHATBOT_SOURCE_FIX.md  CHATBOT_TROUBLESHOOTING.md  ENVIRONMENT_VARIABLES_SETUP.md  FINAL_STATUS.md  FRONTEND_ENV_VARIABLES.md  GITHUB_PAGES_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  RENDER_QUICK_START.md  TEST_CHAT_HISTORY.md  package-lock.json  package.json  render.yaml
.github/workflows/: deploy.yml
backend/: .env  =1.0.0  Dockerfile  README.md  check_status.py  docker-compose.yml  fix_chat_collections.py  migrate_documents.py  pyproject.toml  reingest_docs.py  requirements-dev.txt  requirements-updated.txt  requirements.txt  start.sh  test_chat.py  verify_urls.py
backend/app/: main.py
backend/app/api/: chat.py  health.py  ingest.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: chat.py  document.py  embedding.py
backend/app/services/: chat_history_service.py  document_service.py  embedding_service.py  llm_service.py  rag_service.py
backend/app/utils/: document_parser.py  validators.py
backend/tests/: test_chat.py  test_health.py  test_ingest.py  test_main.py  test_rag_service.py
backend/tests/integration/: test_rag_pipeline.py
docusaurus/: LICENSE  LOCALE_SWITCHING.md  README.md  START_URDU.md  TRANSLATION_STATUS.md  UI_IMPROVEMENTS.md  URDU_SETUP.md  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docusaurus/.docusaurus/: client-manifest.json  client-modules.js  (+7 more)
(+174 files in other folders)
