[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi==0.125.0",
    "langchain==1.2.0",
    "langchain-community==0.4.1",
    "markdown==3.10",
    "openai==2.13.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "qdrant-client==1.16.2",
    "setuptools<81",
    "tiktoken==0.12.0",
    "unstructured>=0.18.0",
    "uvicorn[standard]==0.38.0",
]
